--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><img src="images/Photograph.png" alt="logo"href="index.html"></h1>
+								<h1><img src="images/photograph.png" alt="logo"href="index.html"></h1>
 							</header>
 						</div>
 
