--- a/index.html
+++ b/index.html
@@ -200,23 +200,21 @@
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">還趕拍片啊!國棟</a></h3>
+									<h3><a href="#">當個防疫小尖兵</a></h3>
 								</header>
 								<p>
-									為知名實況主國棟設計的專輯封面，以及標準字、logo、CD設計，以國棟
-最廣為人知的口號做設計，並且以藍色為主要色系。
-
+以螢光藍綠為主色調，製造警示的感受，提醒大家要隨時警惕疫情，當個防疫小尖兵。
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic09.png" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/pic18.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">OREO</a></h3>
+									<h3><a href="#">塗鴉牆</a></h3>
 								</header>
 								<p>
-									這是我第一次嘗試用C4D做海報，想製作專屬於自己作品集的一張海報，利用酸性元素及立方體玻璃材質效果製成的。會想用這樣的效果是因為自己本身很喜歡有關酸性設計的海報，以及透明玻璃的材質，所以想碰撞在一起看會擦出什麼樣的火花。
+									第一次的塗鴉，很有趣也很新奇。
 								</p>
 							</article>
 						</div>
